refactor: format code with 4-space indentation and clean structure

--- a/about.html
+++ b/about.html
@@ -2,111 +2,129 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Learn more about BlogsHub - your go-to platform for tech, lifestyle, health, entertainment and thoughtful reads." />
-  <title>About Us | BlogsHub</title>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8833008865372719"
-     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Learn more about BlogsHub - your go-to platform for tech, lifestyle, health, entertainment and thoughtful reads." />
+    <title>About Us | BlogsHub</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8833008865372719"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
 
 <body class="bg-sky-50 text-gray-800">
-  <!-- Navbar -->
-  <script src="navbar.js"></script>
-  <div id="navbar-placeholder"></div>
+    <!-- Navbar -->
+    <script src="navbar.js"></script>
+    <div id="navbar-placeholder"></div>
 
-  <!-- Page Header -->
-  <header class="bg-gray-700 py-12 text-center text-white">
-    <h1 class="text-4xl font-bold">About BlogsHub</h1>
-    <p class="mt-2 text-lg">Our mission, values, and the people behind the words.</p>
-  </header>
+    <!-- Page Header -->
+    <header class="bg-gray-700 py-12 text-center text-white">
+        <h1 class="text-4xl font-bold">About BlogsHub</h1>
+        <p class="mt-2 text-lg">Our mission, values, and the people behind the words.</p>
+    </header>
 
-  <!-- Main Content -->
-  <main class="max-w-4xl mx-auto px-6 py-12 space-y-10">
-    
-    <section>
-      <h2 class="text-3xl font-bold mb-4">Welcome to BlogsHub</h2>
-      <p class="leading-relaxed text-lg">
-        BlogsHub is more than just a blog—it's a digital sanctuary for readers seeking depth, perspective, and insight. 
-        Founded on the idea that the internet deserves better content, BlogsHub strives to offer thoughtful articles, 
-        engaging stories, and relevant opinions that spark curiosity and conversation. Whether you're a tech enthusiast, 
-        a health geek, or someone who simply enjoys a good read, there's something for you here.
-      </p>
-    </section>
+    <!-- Main Content -->
+    <main class="max-w-4xl mx-auto px-6 py-12 space-y-10">
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">Our Mission</h2>
-      <p class="leading-relaxed text-lg">
-        Our mission is simple: to provide high-quality, accessible content on a wide range of topics that matter to everyday readers. 
-        We believe knowledge should be shared, perspectives should be heard, and that writing has the power to change minds—and lives.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">Welcome to BlogsHub</h2>
+            <p class="leading-relaxed text-lg">
+                BlogsHub is more than just a blog—it's a digital sanctuary for readers seeking depth, perspective, and
+                insight.
+                Founded on the idea that the internet deserves better content, BlogsHub strives to offer thoughtful
+                articles,
+                engaging stories, and relevant opinions that spark curiosity and conversation. Whether you're a tech
+                enthusiast,
+                a health geek, or someone who simply enjoys a good read, there's something for you here.
+            </p>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">What We Cover</h2>
-      <ul class="list-disc ml-6 text-lg space-y-2">
-        <li><strong>Technology:</strong> From the latest gadgets to deep dives into AI and cybersecurity.</li>
-        <li><strong>Health & Wellness:</strong> Practical advice, research-backed insights, and inspiration for better living.</li>
-        <li><strong>Sports:</strong> Highlights, commentary, and underdog stories that thrill sports fans.</li>
-        <li><strong>Lifestyle:</strong> Tips on productivity, mindfulness, and making life a little more beautiful.</li>
-        <li><strong>Entertainment:</strong> Reviews, previews, and essays on film, music, and pop culture.</li>
-      </ul>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">Our Mission</h2>
+            <p class="leading-relaxed text-lg">
+                Our mission is simple: to provide high-quality, accessible content on a wide range of topics that matter
+                to everyday readers.
+                We believe knowledge should be shared, perspectives should be heard, and that writing has the power to
+                change minds—and lives.
+            </p>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">How We Work</h2>
-      <p class="leading-relaxed text-lg">
-        Our content is written and curated by a team of writers, editors, and passionate contributors from around the globe. 
-        Every article goes through a careful editorial process to ensure it meets our standards for clarity, accuracy, and value. 
-        We prioritize original thinking and ethical publishing practices.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">What We Cover</h2>
+            <ul class="list-disc ml-6 text-lg space-y-2">
+                <li><strong>Technology:</strong> From the latest gadgets to deep dives into AI and cybersecurity.</li>
+                <li><strong>Health & Wellness:</strong> Practical advice, research-backed insights, and inspiration for
+                    better living.</li>
+                <li><strong>Sports:</strong> Highlights, commentary, and underdog stories that thrill sports fans.</li>
+                <li><strong>Lifestyle:</strong> Tips on productivity, mindfulness, and making life a little more
+                    beautiful.</li>
+                <li><strong>Entertainment:</strong> Reviews, previews, and essays on film, music, and pop culture.</li>
+            </ul>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">Meet the Team</h2>
-      <p class="leading-relaxed text-lg">
-        BlogsHub is powered by a small but mighty team. We're writers, developers, designers, and most importantly—readers just like you.
-        Our contributors range from professionals with deep domain expertise to curious minds sharing unique perspectives.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">How We Work</h2>
+            <p class="leading-relaxed text-lg">
+                Our content is written and curated by a team of writers, editors, and passionate contributors from
+                around the globe.
+                Every article goes through a careful editorial process to ensure it meets our standards for clarity,
+                accuracy, and value.
+                We prioritize original thinking and ethical publishing practices.
+            </p>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">Why Trust Us?</h2>
-      <p class="leading-relaxed text-lg">
-        We don’t chase clicks—we pursue quality. Our goal is to earn your trust through consistency, transparency, and respect for your time. 
-        No spammy headlines. No misleading information. Just content that informs, entertains, and adds value to your day.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">Meet the Team</h2>
+            <p class="leading-relaxed text-lg">
+                BlogsHub is powered by a small but mighty team. We're writers, developers, designers, and most
+                importantly—readers just like you.
+                Our contributors range from professionals with deep domain expertise to curious minds sharing unique
+                perspectives.
+            </p>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">Join Our Community</h2>
-      <p class="leading-relaxed text-lg">
-        BlogsHub isn’t just a publication—it’s a community. We welcome your comments, your ideas, and your contributions. 
-        Got something to share? Want to collaborate? Drop us a message via our <a href="contact.html" class="text-blue-600 hover:underline">Contact Page</a>.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">Why Trust Us?</h2>
+            <p class="leading-relaxed text-lg">
+                We don’t chase clicks—we pursue quality. Our goal is to earn your trust through consistency,
+                transparency, and respect for your time.
+                No spammy headlines. No misleading information. Just content that informs, entertains, and adds value to
+                your day.
+            </p>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">Let’s Keep Growing</h2>
-      <p class="leading-relaxed text-lg">
-        As we continue to expand our reach and refine our voice, we invite you to be part of the journey. 
-        Subscribe to our newsletter, follow us on social media, and check back regularly for fresh content.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">Join Our Community</h2>
+            <p class="leading-relaxed text-lg">
+                BlogsHub isn’t just a publication—it’s a community. We welcome your comments, your ideas, and your
+                contributions.
+                Got something to share? Want to collaborate? Drop us a message via our <a href="contact.html"
+                    class="text-blue-600 hover:underline">Contact Page</a>.
+            </p>
+        </section>
 
-    <section class="bg-white border border-sky-200 p-6 rounded shadow">
-      <h3 class="text-2xl font-semibold mb-2">Contact Information</h3>
-      <p class="text-lg">Email: <a href="mailto:team@blogshub.online" class="text-blue-600 hover:underline">team@blogshub.online</a></p>
-      <p class="text-lg mt-1">Website: <a href="https://www.blogshub.online" class="text-blue-600 hover:underline">www.blogshub.online</a></p>
-    </section>
-  </main>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">Let’s Keep Growing</h2>
+            <p class="leading-relaxed text-lg">
+                As we continue to expand our reach and refine our voice, we invite you to be part of the journey.
+                Subscribe to our newsletter, follow us on social media, and check back regularly for fresh content.
+            </p>
+        </section>
 
-  <!-- Footer -->
-  <div id="footer-placeholder"></div>
-  <script src="footer.js"></script>
+        <section class="bg-white border border-sky-200 p-6 rounded shadow">
+            <h3 class="text-2xl font-semibold mb-2">Contact Information</h3>
+            <p class="text-lg">Email: <a href="mailto:team@blogshub.online"
+                    class="text-blue-600 hover:underline">team@blogshub.online</a></p>
+            <p class="text-lg mt-1">Website: <a href="https://www.blogshub.online"
+                    class="text-blue-600 hover:underline">www.blogshub.online</a></p>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+    <script src="footer.js"></script>
 </body>
 
 </html>
