--- a/contact.html
+++ b/contact.html
@@ -2,66 +2,72 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Contact BlogsHub - Get in touch with us for inquiries, feedback, or collaboration." />
-  <title>Contact Us | BlogsHub</title>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8833008865372719"
-     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Contact BlogsHub - Get in touch with us for inquiries, feedback, or collaboration." />
+    <title>Contact Us | BlogsHub</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8833008865372719"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
 
 <body class="bg-gray-50 text-gray-800">
-  <!-- Navbar -->
-  <script src="navbar.js"></script>
-  <div id="navbar-placeholder"></div>
+    <!-- Navbar -->
+    <script src="navbar.js"></script>
+    <div id="navbar-placeholder"></div>
 
-  <!-- Header -->
-  <header class="bg-gray-800 text-white py-12 text-center">
-    <h1 class="text-4xl font-bold">Contact Us</h1>
-    <p class="text-lg mt-2">We'd love to hear from you!</p>
-  </header>
+    <!-- Header -->
+    <header class="bg-gray-800 text-white py-12 text-center">
+        <h1 class="text-4xl font-bold">Contact Us</h1>
+        <p class="text-lg mt-2">We'd love to hear from you!</p>
+    </header>
 
-  <!-- Contact Content -->
-  <main class="max-w-3xl mx-auto px-6 py-12">
-    <section class="bg-white p-8 shadow-md rounded-md space-y-6">
-      <p class="text-lg">
-        For any inquiries, feedback, suggestions, or collaboration opportunities, feel free to reach out to us. 
-        Since this is a static website, the form below is just for layout. Please use the email address below to contact us directly.
-      </p>
+    <!-- Contact Content -->
+    <main class="max-w-3xl mx-auto px-6 py-12">
+        <section class="bg-white p-8 shadow-md rounded-md space-y-6">
+            <p class="text-lg">
+                For any inquiries, feedback, suggestions, or collaboration opportunities, feel free to reach out to us.
+                Since this is a static website, the form below is just for layout. Please use the email address below to
+                contact us directly.
+            </p>
 
-      <div class="bg-gray-100 p-4 rounded-md border-l-4 border-blue-500">
-        <p class="text-lg font-semibold">📧 Email us at:</p>
-        <p class="mt-1 text-blue-600">
-          <a href="mailto:contact@blogshub.online" class="underline">contact@blogshub.online</a>
-        </p>
-      </div>
+            <div class="bg-gray-100 p-4 rounded-md border-l-4 border-blue-500">
+                <p class="text-lg font-semibold">📧 Email us at:</p>
+                <p class="mt-1 text-blue-600">
+                    <a href="mailto:contact@blogshub.online" class="underline">contact@blogshub.online</a>
+                </p>
+            </div>
 
-      <!-- Static Form Layout -->
-      <form class="space-y-4" onsubmit="alert('This form is static. Please email us directly.'); return false;">
-        <div>
-          <label class="block font-semibold mb-1">Your Name</label>
-          <input type="text" placeholder="John Doe" class="w-full border rounded-md px-3 py-2" required />
-        </div>
-        <div>
-          <label class="block font-semibold mb-1">Your Email</label>
-          <input type="email" placeholder="john@example.com" class="w-full border rounded-md px-3 py-2" required />
-        </div>
-        <div>
-          <label class="block font-semibold mb-1">Message</label>
-          <textarea rows="5" placeholder="Your message..." class="w-full border rounded-md px-3 py-2" required></textarea>
-        </div>
-        <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 transition">
-          Send Message
-        </button>
-      </form>
-    </section>
-  </main>
+            <!-- Static Form Layout -->
+            <form class="space-y-4" onsubmit="alert('This form is static. Please email us directly.'); return false;">
+                <div>
+                    <label class="block font-semibold mb-1">Your Name</label>
+                    <input type="text" placeholder="John Doe" class="w-full border rounded-md px-3 py-2" required />
+                </div>
+                <div>
+                    <label class="block font-semibold mb-1">Your Email</label>
+                    <input type="email" placeholder="john@example.com" class="w-full border rounded-md px-3 py-2"
+                        required />
+                </div>
+                <div>
+                    <label class="block font-semibold mb-1">Message</label>
+                    <textarea rows="5" placeholder="Your message..." class="w-full border rounded-md px-3 py-2"
+                        required></textarea>
+                </div>
+                <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 transition">
+                    Send Message
+                </button>
+            </form>
+        </section>
+    </main>
 
-  <!-- Footer -->
-  <div id="footer-placeholder"></div>
-  <script src="footer.js"></script>
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+    <script src="footer.js"></script>
 </body>
 
 </html>
