--- a/terms.html
+++ b/terms.html
@@ -2,134 +2,154 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Terms of Service for BlogsHub - Understand the rules, limitations, and content guidelines for using our site." />
-  <title>Terms of Service | BlogsHub</title>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8833008865372719"
-     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Terms of Service for BlogsHub - Understand the rules, limitations, and content guidelines for using our site." />
+    <title>Terms of Service | BlogsHub</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8833008865372719"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
 
 <body class="bg-sky-50 text-gray-800">
-  <!-- Navbar -->
-  <script src="navbar.js"></script>
-  <div id="navbar-placeholder"></div>
+    <!-- Navbar -->
+    <script src="navbar.js"></script>
+    <div id="navbar-placeholder"></div>
 
-  <!-- Page Header -->
-  <header class="bg-gray-800 py-12 text-center text-white">
-    <h1 class="text-4xl font-bold">Terms of Service</h1>
-    <p class="mt-2 text-lg">Effective Date: June 1, 2025</p>
-  </header>
+    <!-- Page Header -->
+    <header class="bg-gray-800 py-12 text-center text-white">
+        <h1 class="text-4xl font-bold">Terms of Service</h1>
+        <p class="mt-2 text-lg">Effective Date: June 1, 2025</p>
+    </header>
 
-  <!-- Main Content -->
-  <main class="max-w-4xl mx-auto px-6 py-12 space-y-10">
+    <!-- Main Content -->
+    <main class="max-w-4xl mx-auto px-6 py-12 space-y-10">
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">1. Acceptance of Terms</h2>
-      <p class="leading-relaxed text-lg">
-        By accessing or using <strong>BlogsHub</strong> (the “Site”), you agree to be bound by these Terms of Service 
-        (“Terms”). If you do not agree to these Terms, please do not use the Site.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">1. Acceptance of Terms</h2>
+            <p class="leading-relaxed text-lg">
+                By accessing or using <strong>BlogsHub</strong> (the “Site”), you agree to be bound by these Terms of
+                Service
+                (“Terms”). If you do not agree to these Terms, please do not use the Site.
+            </p>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">2. Nature of Content</h2>
-      <p class="leading-relaxed text-lg">
-        BlogsHub publishes general articles, blogs, and informative content across topics like technology, health, 
-        entertainment, sports, and lifestyle. Some of the content may be written by humans, while other parts may 
-        be automatically generated with the help of artificial intelligence (AI) tools. While we strive for accuracy, 
-        completeness, and usefulness, <strong>we do not guarantee the factual correctness or reliability</strong> 
-        of any content published on the site.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">2. Nature of Content</h2>
+            <p class="leading-relaxed text-lg">
+                BlogsHub publishes general articles, blogs, and informative content across topics like technology,
+                health,
+                entertainment, sports, and lifestyle. Some of the content may be written by humans, while other parts
+                may
+                be automatically generated with the help of artificial intelligence (AI) tools. While we strive for
+                accuracy,
+                completeness, and usefulness, <strong>we do not guarantee the factual correctness or
+                    reliability</strong>
+                of any content published on the site.
+            </p>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">3. Not Professional Advice</h2>
-      <p class="leading-relaxed text-lg">
-        The content on BlogsHub is provided for general informational purposes only and should not be interpreted as 
-        professional, legal, medical, financial, or any other form of expert advice. You should not rely solely on 
-        the information provided on this website to make decisions that affect your personal, professional, or 
-        financial life. Always consult with a qualified expert before taking action.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">3. Not Professional Advice</h2>
+            <p class="leading-relaxed text-lg">
+                The content on BlogsHub is provided for general informational purposes only and should not be
+                interpreted as
+                professional, legal, medical, financial, or any other form of expert advice. You should not rely solely
+                on
+                the information provided on this website to make decisions that affect your personal, professional, or
+                financial life. Always consult with a qualified expert before taking action.
+            </p>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">4. Intellectual Property</h2>
-      <p class="leading-relaxed text-lg">
-        Unless otherwise stated, all articles, text, images, and design elements on BlogsHub are either owned by us 
-        or used with appropriate permission or licensing. You may not copy, reproduce, modify, or distribute any part 
-        of the content without prior written consent, except for brief quotations for non-commercial use with 
-        attribution.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">4. Intellectual Property</h2>
+            <p class="leading-relaxed text-lg">
+                Unless otherwise stated, all articles, text, images, and design elements on BlogsHub are either owned by
+                us
+                or used with appropriate permission or licensing. You may not copy, reproduce, modify, or distribute any
+                part
+                of the content without prior written consent, except for brief quotations for non-commercial use with
+                attribution.
+            </p>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">5. User Conduct</h2>
-      <p class="leading-relaxed text-lg">
-        You agree to use the Site only for lawful purposes. You agree not to:
-      </p>
-      <ul class="list-disc ml-6 mt-4 space-y-2 text-lg">
-        <li>Attempt to gain unauthorized access to any part of the site.</li>
-        <li>Use the site to promote spam, malware, or misleading links.</li>
-        <li>Misuse or misrepresent any information presented on the site.</li>
-        <li>Violate any applicable laws or regulations while using the site.</li>
-      </ul>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">5. User Conduct</h2>
+            <p class="leading-relaxed text-lg">
+                You agree to use the Site only for lawful purposes. You agree not to:
+            </p>
+            <ul class="list-disc ml-6 mt-4 space-y-2 text-lg">
+                <li>Attempt to gain unauthorized access to any part of the site.</li>
+                <li>Use the site to promote spam, malware, or misleading links.</li>
+                <li>Misuse or misrepresent any information presented on the site.</li>
+                <li>Violate any applicable laws or regulations while using the site.</li>
+            </ul>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">6. External Links</h2>
-      <p class="leading-relaxed text-lg">
-        Our website may contain links to external websites for convenience and reference. We are not responsible for the 
-        content, privacy policies, or practices of any third-party websites. You access such sites at your own risk.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">6. External Links</h2>
+            <p class="leading-relaxed text-lg">
+                Our website may contain links to external websites for convenience and reference. We are not responsible
+                for the
+                content, privacy policies, or practices of any third-party websites. You access such sites at your own
+                risk.
+            </p>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">7. Disclaimer of Liability</h2>
-      <p class="leading-relaxed text-lg">
-        <strong>BlogsHub is provided on an “as-is” and “as-available” basis.</strong> We make no warranties, either express or 
-        implied, about the operation of the site or the accuracy of its content. We are not liable for any direct, 
-        indirect, incidental, or consequential damages that may result from your use of, or inability to use, the site.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">7. Disclaimer of Liability</h2>
+            <p class="leading-relaxed text-lg">
+                <strong>BlogsHub is provided on an “as-is” and “as-available” basis.</strong> We make no warranties,
+                either express or
+                implied, about the operation of the site or the accuracy of its content. We are not liable for any
+                direct,
+                indirect, incidental, or consequential damages that may result from your use of, or inability to use,
+                the site.
+            </p>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">8. Changes to These Terms</h2>
-      <p class="leading-relaxed text-lg">
-        We may update or modify these Terms at any time, and any changes will be posted on this page. Your continued use 
-        of the site after changes are made constitutes acceptance of the updated Terms. It is your responsibility to 
-        check this page periodically.
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">8. Changes to These Terms</h2>
+            <p class="leading-relaxed text-lg">
+                We may update or modify these Terms at any time, and any changes will be posted on this page. Your
+                continued use
+                of the site after changes are made constitutes acceptance of the updated Terms. It is your
+                responsibility to
+                check this page periodically.
+            </p>
+        </section>
 
-    <section>
-      <h2 class="text-3xl font-bold mb-4">9. Contact Information</h2>
-      <p class="leading-relaxed text-lg">
-        If you have any questions or concerns about these Terms, feel free to contact us at:
-      </p>
-      <p class="mt-4 text-lg">
-        Email: <a href="mailto:team@blogshub.online" class="text-blue-600 hover:underline">team@blogshub.online</a>
-      </p>
-    </section>
+        <section>
+            <h2 class="text-3xl font-bold mb-4">9. Contact Information</h2>
+            <p class="leading-relaxed text-lg">
+                If you have any questions or concerns about these Terms, feel free to contact us at:
+            </p>
+            <p class="mt-4 text-lg">
+                Email: <a href="mailto:team@blogshub.online"
+                    class="text-blue-600 hover:underline">team@blogshub.online</a>
+            </p>
+        </section>
 
-    <section class="bg-white border border-sky-200 p-6 rounded shadow">
-      <h3 class="text-xl font-semibold mb-2">TL;DR (Too Long; Didn’t Read)</h3>
-      <ul class="list-disc ml-6 text-lg space-y-2">
-        <li>Using BlogsHub means you agree to these terms.</li>
-        <li>Some articles may be AI-generated or general content.</li>
-        <li>Don’t take anything here as professional advice.</li>
-        <li>We’re not responsible for any external links or actions you take based on our content.</li>
-        <li>We're a static site with no logins, no tracking, and no user data collected.</li>
-      </ul>
-    </section>
+        <section class="bg-white border border-sky-200 p-6 rounded shadow">
+            <h3 class="text-xl font-semibold mb-2">TL;DR (Too Long; Didn’t Read)</h3>
+            <ul class="list-disc ml-6 text-lg space-y-2">
+                <li>Using BlogsHub means you agree to these terms.</li>
+                <li>Some articles may be AI-generated or general content.</li>
+                <li>Don’t take anything here as professional advice.</li>
+                <li>We’re not responsible for any external links or actions you take based on our content.</li>
+                <li>We're a static site with no logins, no tracking, and no user data collected.</li>
+            </ul>
+        </section>
 
-  </main>
+    </main>
 
-  <!-- Footer -->
-  <div id="footer-placeholder"></div>
-  <script src="footer.js"></script>
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+    <script src="footer.js"></script>
 </body>
 
 </html>
