--- a/404.html
+++ b/404.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="refresh" content="0; url=/article.html" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8833008865372719"
-     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script>
-      const path = window.location.pathname;
-      // Check if it's a pretty URL like /article/some-post-id
-      if (path.startsWith("/article/")) {
-        const slug = path.replace("/article", "");
-        window.location.replace("/article.html" + slug);
-      } else {
-        // For any other unknown path, go to homepage
-        window.location.replace("/");
-      }
+        const path = window.location.pathname;
+        // Check if it's a pretty URL like /article/some-post-id
+        if (path.startsWith("/article/")) {
+            const slug = path.replace("/article", "");
+            window.location.replace("/article.html" + slug);
+        } else {
+            // For any other unknown path, go to homepage
+            window.location.replace("/");
+        }
     </script>
     <title>Redirecting...</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <p>Redirecting...</p>
-  </body>
+</body>
+
 </html>
