--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Disclaimer - My Blog</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8833008865372719"
-     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  </head>
-  <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RWT6WMPL0R"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RWT6WMPL0R"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-        gtag('config', 'G-RWT6WMPL0R');
-    </script>
-  <body class="bg-gray-700 text-white">
+    gtag('config', 'G-RWT6WMPL0R');
+</script>
+
+<body class="bg-gray-700 text-white">
     <nav class="bg-white shadow p-4 flex justify-between items-center">
-      <a href="index.html" class="text-xl font-bold">My Blog</a>
-      <div class="space-x-4">
-        <a href="about.html" class="text-gray-700 hover:text-black">About</a>
-        <a href="contact.html" class="text-gray-700 hover:text-black">Contact</a>
-        <a href="privacy-policy.html" class="text-gray-700 hover:text-black">Privacy</a>
-        <a href="terms.html" class="text-gray-700 hover:text-black">Terms</a>
-        <a href="disclaimer.html" class="text-gray-700 hover:text-black">Disclaimer</a>
-      </div>
+        <a href="index.html" class="text-xl font-bold">My Blog</a>
+        <div class="space-x-4">
+            <a href="about.html" class="text-gray-700 hover:text-black">About</a>
+            <a href="contact.html" class="text-gray-700 hover:text-black">Contact</a>
+            <a href="privacy-policy.html" class="text-gray-700 hover:text-black">Privacy</a>
+            <a href="terms.html" class="text-gray-700 hover:text-black">Terms</a>
+            <a href="disclaimer.html" class="text-gray-700 hover:text-black">Disclaimer</a>
+        </div>
     </nav>
     <main class="max-w-3xl mx-auto p-4">
-      <div class="bg-white shadow p-6 rounded">
-        <p>This blog is for educational use...</p>
-      </div>
+        <div class="bg-white shadow p-6 rounded">
+            <p>This blog is for educational use...</p>
+        </div>
     </main>
-  </body>
+</body>
+
 </html>
