added margin for tags

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <h1 class="text-3xl font-bold mb-2 px-3 sm:px-0">${blog.title}</h1>
                         <time class="text-sm text-gray-500 block mb-3 px-3 sm:px-0">${new Date(blog.date).toDateString()}</time>
                         <div class="mb-4 text-sm px-3 sm:px-0">
-                            ${blog.tags.map(t => `<span class="inline-block bg-blue-500 text-white font-semibold px-2 py-1 rounded mr-2">${t}</span>`).join('')}
+                            ${blog.tags.map(t => `<span class="inline-block bg-blue-500 text-white font-semibold px-2 my-1 py-1 rounded mr-2">${t}</span>`).join('')}
                         </div>
                         <hr class="my-4" />
 
